# pypiserver_test

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/nginx/: nginx.conf
configs/nginx/conf.d/: gzip.conf  headers.conf  proxy.conf  ssl.conf
